# fluxdns

./: LICENSE  README.md  README_EN.md
backend/: .env.example  Cargo.toml  Dockerfile  benchmark.py  config.example.toml
backend/src/: bootstrap.rs  error.rs  main.rs  state.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs  models.rs  repository.rs  stats_cache.rs
backend/src/dns/: cache.rs  message.rs  resolver.rs  rewrite.rs
backend/src/dns/proxy/: client.rs  mod.rs  strategy.rs  upstream.rs
backend/src/dns/server/: doh.rs  doq.rs  dot.rs  mod.rs  udp.rs
backend/src/llm/: client.rs  config.rs  mod.rs  types.rs
backend/src/llm/functions/: analytics.rs  cache.rs  config_mgmt.rs  diagnostics.rs  dns_query.rs  dns_records.rs  help.rs  listeners.rs  logs.rs  mod.rs  rewrite_rules.rs  settings.rs  upstreams.rs
backend/src/log/: mod.rs
backend/src/services/: listener_manager.rs
backend/src/web/: auth.rs  cache.rs  listeners.rs  llm.rs  logs.rs  mod.rs  records.rs  rewrite.rs  settings.rs  static_files.rs  stats.rs  strategy.rs  upstreams.rs
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: index.ts
frontend/src/components/: AiAssistant.vue
frontend/src/composables/: useResponsive.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/views/: Cache.vue  Dashboard.vue  DnsQuery.vue  DnsRecords.vue  Listeners.vue  LlmSettings.vue  Login.vue  QueryLogs.vue  RewriteRules.vue  Settings.vue  Upstreams.vue
