[package]
name = "fluxdns"
version = "0.1.0"
edition = "2021"
description = "FluxDNS - A modern DNS proxy service with multi-protocol support"
authors = ["FluxDNS Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# DNS protocol
trust-dns-proto = "0.23"

# QUIC support
quinn = "0.11"

# HTTP/3 support
h3 = { git = "https://github.com/hyperium/h3", branch = "master" }
h3-quinn = { git = "https://github.com/hyperium/h3", branch = "master" }
http = "1.0"
bytes = "1"

# TLS support
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"

# Static file embedding
rust-embed = { version = "8", features = ["mime-guess"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
mime_guess = "2"
regex = "1"

# HTTP client for DoH upstream
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# TLS root certificates
webpki-roots = "0.26"

# Base64 encoding for DoH
base64 = "0.21"

# Random number generation
rand = "0.8"

# Async utilities
futures = "0.3"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "dns-proxy-service"
path = "src/main.rs"
